--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,8 @@ Suggests:
     knitr,
     rmarkdown
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    rsample,
+    foreach,
+    tibble
 VignetteBuilder: knitr
