--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(gradient_descent_new)
 export(linear_model)
 export(make_model_matrices)
 export(ridge_regression)
+import(glmnet)
 import(purrr)
 importFrom(foreach,"%do%")
 importFrom(foreach,foreach)
