--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,22 @@
 
 S3method(predict,ridge_regression)
 export(cv_ridge)
+export(f_propagate)
 export(glm_adapt)
 export(glm_constant)
 export(gradient_descent)
 export(gradient_descent_new)
 export(linear_model)
 export(make_model_matrices)
+export(make_weights)
 export(multiclass_logistic)
+export(plot_boundary)
+export(relu)
+export(relu_p)
 export(ridge_regression)
+export(softmax)
+export(xy2pos)
+import(fastDummies)
 import(glmnet)
 import(purrr)
 importFrom(foreach,"%do%")
